@@ -909,6 +909,9 @@ SVG_FILTER_NAME=SVG Image Files
 # Infix filter
 INFIX_FILTER_NAME=Infix Files
 
+# Flash filter
+FLASH_FILTER_NAME=Flash XML export
+
 # org.omegat.filters3.xml.Handler
 XML_FATAL_ERROR=Error in file {0}, line {1}
 
