@@ -856,6 +856,9 @@ SVG_FILTER_NAME=Fichiers image SVG
 # Infix filter
 INFIX_FILTER_NAME=Fichiers Infix
 
+# Flash filter
+FLASH_FILTER_NAME=Export XML Flash
+
 # org.omegat.filters3.xml.Handler
 XML_FATAL_ERROR=Erreur dans le fichier {0} \u00e0 la ligne {1}
 
